--- a/module-domain/build.gradle
+++ b/module-domain/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     implementation project(':module-infra')
+    implementation project(':module-common')
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' //TODO 리팩터링 후 삭제 되어야 합니다
     compileOnly 'org.projectlombok:lombok'
